--- a/MapProHack/MapProHack/Content/Site.css
+++ b/MapProHack/MapProHack/Content/Site.css
@@ -1,6 +1,8 @@
 ﻿body {
+    height:100%;
     padding-top: 50px;
     padding-bottom: 20px;
+    margin: 0px;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -22,3 +24,65 @@ select,
 textarea {
     max-width: 280px;
 }
+.block1 {
+    width: 280px;
+    background: #ccc;
+    padding: 5px;
+    margin-left:40%;
+    margin-top:10%;
+    padding-right: 20px;
+    border: solid 1px black;
+    float: left;
+}
+.block2 {
+    width: 280px;
+    background: #ccc;
+    padding: 5px;
+    margin-left: 40%;
+    margin-top: 1%;
+    padding-right: 20px;
+    border: solid 1px black;
+    float: left;
+}
+.block3 {
+    width: 280px;
+    background: #ccc;
+    padding: 5px;
+    margin-left: 40%;
+    margin-top: 1%;
+    padding-right: 20px;
+    border: solid 1px black;
+    float: left;
+}
+#wrapper {
+    max-width: 960px;
+    margin: auto;
+}
+
+header {
+    padding: 20px 0;
+    text-align:center;
+}
+
+.wrapper {
+    position: relative;
+    min-height: 100%;
+}
+
+.content {
+    padding-bottom: 90px;
+}
+
+.footer {
+    text-align:center;
+    background: #7e7e7e;
+    color: #dbdbdb;
+    font-size: 15px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+}
+
+
