--- a/MapProHack/MapProHack/Views/Home/Index.cshtml
+++ b/MapProHack/MapProHack/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Map Roll";
+    ViewBag.Title = "Bot";
     
 }
 @{
@@ -7,7 +7,7 @@
 }
   
 <body>
-    <div id="wrapper">
+    @*<div id="wrapper">
         <div class="content">
 
             <div class="block1">
@@ -29,7 +29,63 @@
             </div>
         </div>
         
-    </div>
+    </div>*@
    
+    <div class="row">
+
+        <div class="col-md-4"></div>
+   
+
+        <div class="col-md-4">
+
+            <div id="wrapper" class="content">
+                <table class="table table-striped table-inverse">
+                    <thead>
+
+                        <tr>
+                            <th>#</th>
+                            <th>Token Name</th>
+                            <th>Button Input</th>
+
+
+
+                        </tr>
+
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <th>
+                                bot token
+                            </th>
+                            <th>     <input type="text" /></th>
+
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <th>
+                                Title
+                            </th>
+                            <th>     <input type="text" /></th>
+
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <th>
+                                Description
+                            </th>
+                            <th>     <input type="text" /></th>
+
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+            <div class="col-md-4"></div>
+
+
+
+        </div>
 
 </body>
